--- a/index.html
+++ b/index.html
@@ -93,10 +93,12 @@
           <h3>Yapılar Projeler</h3>
           <hr>
           <ol>
-            <li>3D Oyun</li>
-            <li>Android Uygulaması Geliştirme</li>
-            <li>Yapay Zeka Entegreli Gözlük</li>
-            <li>Yapay Zeka Entegreli Eldiven</li>
+            <li>Mal Ayşenur Ucube</li>
+            <li>Mal Bergen Ucube</li>
+            <li>Mal Hamza Ucube</li>
+            <li>Mal Eray Ucube</li>
+                        <li>Mal Melike Ucube</li>
+            <li>Mal Nehir Ucube</li>
           </ol>
         </div>
       </div>
